update festival page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ const currentNav = nav.find((item) =>
 	</a>
 	<nav class="w-full relative">
 		<div class="w-full block lg:hidden">
-			<div class="absolute top-6 w-full">
+			<div class="w-full top-8 relative">
 				<MobileMenu {nav} currentId={currentNav?.id} />
 			</div>
 		</div>
