--- a/src/components/MobileMenu.astro
+++ b/src/components/MobileMenu.astro
@@ -26,7 +26,7 @@ const activeStyle = (href: string) => {
       type="button"
       aria-controls="mobile-menu"
       x-bind:aria-expanded="menuOpen"
-      class="w-full shadow-md text-3xl flex items-center font-title my-2 x py-2 px-2 mx-4 z-10 ring-2 active rounded-full bg-button-active ring-button-active text-button-text-active"
+      class="w-full shadow-md text-3xl flex items-center font-title my-2 x py-2 px-2 mx-4 ring-2 active rounded-full bg-button-active ring-button-active text-button-text-active"
       @click="menuOpen = !menuOpen"
     >
       <span
