new volunteer link

--- a/src/pages/volunteer/_FestivalVolunteer.astro
+++ b/src/pages/volunteer/_FestivalVolunteer.astro
@@ -9,7 +9,7 @@ import Title from "@components/Title.astro";
     group of people that help run HONK! Fest West every year.
   </p>
   <a
-    href="https://pointapp.org/orgs/3346"
+    href="https://www.signupgenius.com/go/30E044EAAA82FA1FD0-56694652-honk#/"
     class="text-shadow block font-base font-medium text-center rounded antialiased text-gray-200 flex-none mt-3 bg-gold-900 w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90"
   >
     » SIGN UP HERE
