--- a/src/pages/festival/_DaySchedule.astro
+++ b/src/pages/festival/_DaySchedule.astro
@@ -30,7 +30,7 @@ const title = `${dayOfWeek} ${monthDay}`;
 
 <div class="content-container mb-10">
 	<BackToTop />
-	<Title title={title} />
+	<Title title={title} subtitle={day.display} />
 	<div class="schedule-grid content">
 		<div class="headers">
 			<div class="blank-header"></div>
